[package]
name = "juno"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
ignore = "0.4.22"
lazy_static = "1.4.0"
prost = "0.12.4"
rodio = "0.17.3"
tokio = { version = "1", features = ["full"] }
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
